--- a/src/app/courses/course-form/course-form.component.html
+++ b/src/app/courses/course-form/course-form.component.html
@@ -10,7 +10,12 @@
       </mat-form-field>
 
       <mat-form-field class="full-width">
-        <input matInput placeholder="Categoria" formControlName="category">
+        <mat-label>Categoria</mat-label>
+        <mat-select formControlName="category">
+          <mat-option value="null"> </mat-option>
+          <mat-option value="front-end">FRONT-END</mat-option>
+          <mat-option value="back-end">BACK-END</mat-option>
+        </mat-select>
       </mat-form-field>
     </form>
   </mat-card-content>
