Aula 35: Validações da API com Java Bean Validation - validar o JSON enviado para a API automaticamente com Java Bean e Hibernate Validators,feito implementação para não expor strack trace na tela por questão de segurança.

--- a/src/app/courses/containers/course-form/course-form.component.html
+++ b/src/app/courses/containers/course-form/course-form.component.html
@@ -17,6 +17,7 @@
           <mat-option value="null"> </mat-option>
           <mat-option value="front-end">FRONT-END</mat-option>
           <mat-option value="back-end">BACK-END</mat-option>
+          <mat-option value="full-stack">FULL-STACK</mat-option>
         </mat-select>
         <mat-error *ngIf="form.get('category')?.invalid">{{getErrorMessage("category")}}</mat-error>
       </mat-form-field>
