Criado a classe btn-space no course-form.components.scss para dar margem entre os botões de salvar e cancelar.

--- a/src/app/courses/components/courses-list/courses-list.component.scss
+++ b/src/app/courses/components/courses-list/courses-list.component.scss
@@ -8,7 +8,13 @@
   flex: 0 0 120px;
 }
 
+// .action-column-header{
+//   flex: 0.3 0 40px;
+
+// }
+
+
 .action-column-header{
-  flex: 0.3 0 40px;
+  margin: 0 auto;
 
 }
